compiler/testData/cli/jvm/nullabilityAnnotations.out
compiler/testData/cli/jvm/severalAnnotations.kt:4:11: error: null cannot be a value of a non-null type 'String'.
    a.foo(null)
          ^^^^
COMPILATION_ERROR
